update dockerfile and add py extension

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,5 +1,10 @@
+
 image:
   file: .gitpod.Dockerfile
 
 tasks:
   - init: echo 'Workspace initialized'
+
+vscode:
+  extensions:
+    - ms-python.python
